# homekit-accessory-sample-esp32

./: .gitmodules  CMakeLists.txt  FIRMWARE.md  LICENSE  README.md  build.sh  export-firmware.sh  sdkconfig
components/tiny/: CMakeLists.txt
components/tinycrypto/: CMakeLists.txt
components/tinyfx/: CMakeLists.txt
components/tinyhap/: CMakeLists.txt
components/tinyhap/include/hap-support/status/: HapStatus.h
components/tinyhap/include/hap-tcp/: HapPersistence.h  HapServerRuntime.h
components/tinymdns/: CMakeLists.txt
components/web-captive-portal/: CMakeLists.txt
firmware/: README.md
source/: CMakeLists.txt  DeviceStack.c  DeviceStack.h  HomeKitStack.c  HomeKitStack.h  main.c  main_esp32.c  main_linux.c
source/device/definition/: Lightbulb.c  Lightbulb.h  P_1_1_Identify.c  P_1_1_Identify.h  P_1_2_Identify.c  P_1_2_Identify.h  P_1_2_Manufacturer.c  P_1_2_Manufacturer.h  P_1_3_Manufacturer.c  P_1_3_Manufacturer.h  P_1_3_Model.c  P_1_3_Model.h  P_1_4_Model.c  P_1_4_Model.h  P_1_4_Name.c  P_1_4_Name.h  P_1_5_Name.c  P_1_5_Name.h  P_1_5_SerialNumber.c  P_1_5_SerialNumber.h  P_1_6_FirmwareRevision.c  P_1_6_FirmwareRevision.h  P_1_6_SerialNumber.c  P_1_6_SerialNumber.h  P_1_7_FirmwareRevision.c  P_1_7_FirmwareRevision.h  P_1_7_HardwareRevision.c  P_1_7_HardwareRevision.h  P_1_8_AccessoryFlags.c  P_1_8_AccessoryFlags.h  P_2_1_On.c  P_2_1_On.h  P_2_2_Name.c  P_2_2_Name.h  P_8_10_Brightness.c  P_8_10_Brightness.h  P_8_9_On.c  P_8_9_On.h  S_1_AccessoryInformation.c  S_1_AccessoryInformation.h  (+6 more)
source/device/handler/: OnActionInvoke.c  OnActionInvoke.h  OnPropertyGet.c  OnPropertyGet.h  OnPropertySet.c  OnPropertySet.h
source/device/handler/S_1_AccessoryInformation/: S_1_AccessoryInformation_doGet.c  S_1_AccessoryInformation_doGet.h  S_1_AccessoryInformation_doInvoke.c  S_1_AccessoryInformation_doInvoke.h  S_1_AccessoryInformation_doSet.c  S_1_AccessoryInformation_doSet.h
source/device/handler/S_2_Switch/: S_2_Switch_doGet.c  S_2_Switch_doGet.h  S_2_Switch_doInvoke.c  S_2_Switch_doInvoke.h  S_2_Switch_doSet.c  S_2_Switch_doSet.h
source/device/handler/S_8_Lightbulb/: S_8_Lightbulb_doGet.c  S_8_Lightbulb_doGet.h  S_8_Lightbulb_doSet.c  S_8_Lightbulb_doSet.h
source/device/iid/: IID.h
source/device/initializer/: InitializeConfiguration.c  InitializeConfiguration.h
source/device/print/: PrintValue.c  PrintValue.h
source/linux/: CommandReader.c  CommandReader.h  DeviceMonitor.c  DeviceMonitor.h
