#-----------------------------------------------------------------------------
#
# sample-lightbulb
#
#-----------------------------------------------------------------------------


SET(DEVICE_SRC
        device/definition/Switch.h
        device/definition/Switch.c
        device/definition/S_1_AccessoryInformation.h
        device/definition/S_1_AccessoryInformation.c
        device/definition/P_1_1_Identify.h
        device/definition/P_1_1_Identify.c
        device/definition/P_1_2_Manufacturer.h
        device/definition/P_1_2_Manufacturer.c
        device/definition/P_1_3_Model.h
        device/definition/P_1_3_Model.c
        device/definition/P_1_4_Name.h
        device/definition/P_1_4_Name.c
        device/definition/P_1_5_SerialNumber.h
        device/definition/P_1_5_SerialNumber.c
        device/definition/P_1_6_FirmwareRevision.h
        device/definition/P_1_6_FirmwareRevision.c
        device/definition/P_1_7_HardwareRevision.h
        device/definition/P_1_7_HardwareRevision.c
        device/definition/P_1_8_AccessoryFlags.h
        device/definition/P_1_8_AccessoryFlags.c
        device/definition/S_2_Switch.h
        device/definition/S_2_Switch.c
        device/definition/P_2_1_On.h
        device/definition/P_2_1_On.c
        device/definition/P_2_2_Name.h
        device/definition/P_2_2_Name.c
        device/handler/OnActionInvoke.h
        device/handler/OnActionInvoke.c
        device/handler/OnPropertyGet.h
        device/handler/OnPropertyGet.c
        device/handler/OnPropertySet.h
        device/handler/OnPropertySet.c
        device/handler/S_1_AccessoryInformation/S_1_AccessoryInformation_doGet.h
        device/handler/S_1_AccessoryInformation/S_1_AccessoryInformation_doGet.c
        device/handler/S_1_AccessoryInformation/S_1_AccessoryInformation_doSet.h
        device/handler/S_1_AccessoryInformation/S_1_AccessoryInformation_doSet.c
        device/handler/S_1_AccessoryInformation/S_1_AccessoryInformation_doInvoke.h
        device/handler/S_1_AccessoryInformation/S_1_AccessoryInformation_doInvoke.c
        device/handler/S_2_Switch/S_2_Switch_doGet.h
        device/handler/S_2_Switch/S_2_Switch_doGet.c
        device/handler/S_2_Switch/S_2_Switch_doSet.h
        device/handler/S_2_Switch/S_2_Switch_doSet.c
        device/handler/S_2_Switch/S_2_Switch_doInvoke.h
        device/handler/S_2_Switch/S_2_Switch_doInvoke.c
        device/iid/IID.h
        device/initializer/AccessoryCategoryIdentifier.h
        device/initializer/InitializeConfiguration.h
        device/initializer/InitializeConfiguration.c
        device/print/PrintValue.h
        device/print/PrintValue.c
        )

SET(SRC
        ${DEVICE_SRC}
        persistence/HapPersistenceImpl.h
        persistence/HapPersistenceImpl.c
        linux/CommandReader.h
        linux/CommandReader.c
        linux/DeviceMonitor.h
        linux/DeviceMonitor.c
        DeviceStack.h
        DeviceStack.c
        main_linux.c
        )

ADD_EXECUTABLE(sample_lightbulb ${SRC})
TARGET_LINK_LIBRARIES(sample_lightbulb
        hap_local_static
        hap_support_static
        ${DEPENDENCE_LIB})
